--- a/code/style.css
+++ b/code/style.css
@@ -125,7 +125,9 @@ h1, h2{
   display: grid;
   grid-template-columns:1fr 1fr 1fr 1fr;
   grid-gap: 5px;
-  padding: 5px;;
+  /* padding: 5px; */
+  margin-top: 10px;
+  /* margin: 0; */
 }
 
 .grid-2, .grid-7 {
@@ -177,11 +179,11 @@ h1, h2{
     flex-direction: column;
     align-items: center;
     align-content: center;
-    padding: 10px;
+    /* padding: 10px; */
     border: 1px solid black;
     border-radius: 1rem;
     position:absolute;
-    bottom: -1460px;
+    bottom: -1445px;
     width:100%;
     height:200px;
     margin: 0;
@@ -209,7 +211,8 @@ h1, h2{
   border-radius: 1rem;
   border:  1px solid black;
   align-items: center;
-  margin: 8px 5px 5px 5px;
+  margin-left: 5px;
+  /* margin: 8px 5px 5px 5px; */
 }
 
 .grid-1{
@@ -240,8 +243,8 @@ h1, h2{
   border-radius: 1rem;
   padding: 5px;
   grid-column: span 1;
-  margin: 10px;
-  padding: 25px;
+  /* margin: 10px; */
+  padding: 15px;
   align-items: center;
   justify-content: center;
 }
@@ -271,9 +274,11 @@ h1, h2{
 }
 
 .footer-info{
-  bottom: -3350px;
-  width:100%;
+  bottom: -3225px;
+  /* width:100%; */
   height:200px; 
+  margin-left: 5px;
+  
 }
 
 
