--- a/style.css
+++ b/style.css
@@ -273,6 +273,11 @@ header img {
 }
 
 @media (min-width: 1850px) and (max-width: 1920px) {
+  .container-nav {
+    width: 110%;
+
+    margin: 0% 0 0 -0.5%;
+  }
   .nawbar {
     height: 5vh;
   }
