--- a/code/style.css
+++ b/code/style.css
@@ -8,19 +8,30 @@ body {
 header {
   font-family: 'Rampart One', cursive;
   display: flex;
-  background-color: #c7ccd1;
+  background-color: #ffff33;
   justify-content: center;
-  width: 100%;
-  border: 1px solid 
+  width: 100%; 
+  height: 22vh;
 }
 
-.header-logo {
-  width: 15%;
+.header-text {
+  font-size: 7vw;
+  text-align: center;
+  align-self: center;
+}
+
+.head-logo {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  margin-top: 30px;
 }
 
 .site-logo {
+  width: 70px;
+  height: 70px;
   object-fit: cover;
-  height: auto;
+  border-radius: 50%;
   display: none;
 }
 
@@ -29,22 +40,36 @@ nav {
   display: flex;
   justify-content: center;
   padding: 5px;
-  background-color: black;
+  background-color: #ffff33;
+  margin-bottom: 15px;
 }
 
 .nav-menu {
   padding: 5px;
-  color: #ffff66;
+  color: black;
 }
 
+a:hover {
+  color: white;
+  font-size: large;
+
+}
 article > h1 {
-  color: red;
+  color: black;
   font-size: 25px;
   text-decoration: underline;
 }
+
+
 .big-news, .all-events, .all-music {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.events-header, .music-header  {
+    align-self: flex-start;
 }
 
 .big-news-foto, .events-photo, .music-photo {
@@ -61,10 +86,25 @@ footer {
   display: flex;
   align-content: center;
   flex-direction: column;
+  justify-content: center;
+  background-color: #ffff33;
+  height: 15vh;
+}
+
+.social-media {
+  align-self: center;
+}
+.social-media-link {
+  color: black;
+  font-size: 20px;
 }
 
 
 @media (min-width: 668px) {
+
+  body {
+    background-color: white;
+  }
 
   header {
     flex-direction: column;
@@ -72,11 +112,10 @@ footer {
 
   .site-logo {
     display: block;
-    align-self: center;
   }
 
   .header-text {
-    align-self: center;
+    font-size: 5vw;
   }
 
   nav {
@@ -87,7 +126,8 @@ footer {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
+    border: 1px solid black;
   }
 
   .big-news-foto, article {
