--- a/style.css
+++ b/style.css
@@ -272,12 +272,8 @@ header img {
   color: rgb(0, 0, 0);
 }
 
-@media (min-width: 1850px) and (max-width: 1920px) {
-  .container-nav {
-    width: 110%;
-
-    margin: 0% 0 0 -0.5%;
-  }
+@media (min-width: 1850px)  {
+  
   .nawbar {
     height: 5vh;
   }
