--- a/style.css
+++ b/style.css
@@ -272,7 +272,7 @@ header img {
   color: rgb(0, 0, 0);
 }
 
-@media (min-width: 1650px)  {
+@media (min-width: 1850px)  {
   
  
 
@@ -360,6 +360,23 @@ header img {
   }
 }
 
+@media (min-width: 1650px)  {
+
+  .container-nav {
+    width: 110%;
+
+    margin: 0% 0 0 -0.1%;
+  }
+  .navbar-items #nav-img {
+    height: 5vh;
+    margin: 0.5% -0% 0% 1.6%;
+  }
+
+}
+
+
+
+
 @media (min-width: 1025px) and (max-width: 1649px) {
   .container-nav {
     width: 110%;
@@ -372,6 +389,12 @@ header img {
     margin: 0.5% -0% 0% 1.3%;
   }
 }
+
+
+
+
+
+
 
 @media (min-width: 667px) and (max-width: 1024px) {
   body {
