--- a/style.css
+++ b/style.css
@@ -367,9 +367,16 @@ header img {
 
     margin: 0% 0 0 -0.1%;
   }
+
+  .nawbar {
+    height: 6vh;
+    padding-left: 0%;
+    margin-left: -0.5%;
+  }
+
   .navbar-items #nav-img {
-    height: 5vh;
-    margin: 0.5% -0% 0% 1.6%;
+    
+    margin: 0.5% -0% 0% 1.9%;
   }
 
 }
