--- a/style.css
+++ b/style.css
@@ -364,18 +364,19 @@ header img {
 
   .container-nav {
     width: 110%;
-    margin: 0% 0 0 0%;
-    
-    
+    margin: 0% 0 0 -0.1%;
   }
 
   .nawbar {
-    height: 5vh;
+    height: 6vh;
     padding-left: 0%;
     margin-left: -0.5%;
   }
 
- 
+  .navbar-items #nav-img {
+    height:5vh ;
+    margin: 0.5% -0% 0% 1.9%;
+  }
 
 }
 
