--- a/style.css
+++ b/style.css
@@ -390,6 +390,13 @@ header img {
     margin: 0% 0 0 -0.1%;
   }
 
+  .nawbar {
+    height: 5vh;
+    padding-left: 0%;
+    margin-left: -0.5%;
+  }
+
+
   .navbar-items #nav-img {
     height: 5vh;
     margin: 0.5% -0% 0% 1.3%;
