--- a/code/style.css
+++ b/code/style.css
@@ -14,9 +14,8 @@ body {
 }
 
 main {
-  padding: 1rem 0;
   font-family: "Open Sans", sans-serif;
-  width: 80vw;
+  width: 97vw;
   margin: 0 auto;
   text-align: center;
 }
@@ -97,7 +96,7 @@ hr.thick {
 }
 
 .section-news {
-  margin: 3vh;
+  margin: 3vh auto;
   background: linear-gradient(
     to right,
     rgba(238, 174, 202, 1),
@@ -123,4 +122,47 @@ hr.thick {
   min-height: auto;
   object-fit: cover;
   box-shadow: 1vh 1vh 0.5vh rgb(8, 8, 8, 0.5), -1vh -1vh 0.5vh rgb(8, 8, 8, 0.5);
+}
+
+footer {
+  background-color: rgba(148, 187, 233, 1);
+  min-height: 20vh;
+  height: auto;
+  margin-bottom: 2vh;
+}
+
+.footer-wrap {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.footer-site-name-link {
+  font-family: "Bebas neue", cursive;
+  font-size: 5vh;
+  color: rgb(43, 40, 40);
+  padding-top: 2vh;
+  padding-bottom: 1vh;
+  text-align: center;
+}
+
+.footer-social-media-icon {
+  display: flex;
+  height: auto;
+  width: 60%;
+}
+
+.footer-social-media-icon i {
+  display: flex;
+  justify-content: center;
+  font-size: 5vh;
+}
+
+.project-credentials {
+  background-color: rgb(230, 220, 220);
+  font-size: 2vh;
+  font-family: "Open sans", sans-serif;
+  margin-top: 2vh;
+  text-align: center;
+  padding: 2vh;
 }
