--- a/style.css
+++ b/style.css
@@ -122,8 +122,10 @@ font-size: 0.7rem;
   box-shadow: 0 0 0 0 rgba(142, 68, 173, 1);
   animation: video 2s infinite;
   color: white;
-  
+  margin-top: 30px;
+  margin-bottom: 10px;
 }
+
 @keyframes video {
  0% {
     transform: scale(0.95);
