--- a/code/style.css
+++ b/code/style.css
@@ -21,6 +21,7 @@ header {
   color: white;
 }
 
+/* styling of header section on tablet */
 @media (min-width: 668px) {
   header {
     display: flex;
@@ -28,6 +29,18 @@ header {
     justify-content: space-evenly;
     height: 60px;
   }  
+}
+/* styling of header section on desktop */
+@media (min-width: 1024px) {
+  header {
+    justify-content: space-between;
+  }
+  .logo-container {
+    margin-right: 350px;
+  }
+  #contact {
+    margin-right: 15px;
+  }
 }
 
 
@@ -100,6 +113,14 @@ i {
   }
 }
 
+@media (min-width: 1024px) {
+  .other-news {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    margin-top: 30px;
+  }
+}
+
 .big-news-image, .other-news-image  {
   display: block;
   width: 87%;
@@ -135,7 +156,7 @@ i {
 .contact-paragraph {
   text-align: center;
   font-size: 17px;
-  margin-top: 10px;
+  margin-top: 20px;
 }
 
 .fab {
@@ -148,7 +169,8 @@ i {
   text-align: center;
 }
 
-@media (min-width: 668px) {
+/* on tablet: show About and Blog on the left side of the navbar */
+@media (min-width: 668px) and (max-width: 1024px) {
   #about {
     order: -1;
   }
@@ -157,4 +179,5 @@ i {
     order: -1;
   }
 }
+
 
