--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,249 @@
 html {
-  background: #0025ff;
-  color: #fff;
+  background: #e0e0d2;
+}
+
+.header {
+  display: flex;
+  flex-direction: column;
+  margin-top: 10px;
+}
+
+.logo {
+  align-self: center;
+  max-width: 120px;
+}
+
+.title {
+  font-family: 'Homemade Apple';
+  color: rgba(0, 0, 0, 0.76);
+  font-size: 20px;
+  margin-left: 10px;
+  margin-top: -5px;
+  text-align: center;
+}
+
+.topnav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-content: center;
+  margin-top: -30px;
+  padding: 10px;
+}
+
+.topnav a{
+  color: rgba(0, 0, 0, 0.76);
+  font-family: 'IBM Plex Serif', serif;
+  font-weight: bolder;
+  font-size: 18px;
+  text-decoration: none;
+}
+
+.topnav a:hover {
+  color:rgb(146, 146, 112);
+}
+
+.big-news {
+  margin-top: 5px;
+  background-color: rgba(250, 250, 210, 0.233);
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+.columbus, .genghis, .dowland, .calendar, .couple {
+  margin: 30px;
+  max-width: 600px;
+  max-height: 400px;
+  border-radius: 50%;
+ }
+
+.big-news-title {
+  margin-top: -18px;
+  margin-bottom: 5px;  
+  width: 100%;
+  font-family: 'Homemade Apple';
+  color: rgba(0, 0, 0, 0.76);
+  font-size: 20px;
+}
+
+.big-news-text {
+  width: 100%;
+  font-weight: bold;
+  font-family: 'IBM Plex Serif', serif;
+  font-size: 14px;
+  color: rgba(0, 0, 0, 0.76);
+}
+
+.small-news {
+  margin-top: 10px;
+  margin-bottom: 5px;
+  background-color: rgba(250, 250, 210, 0.233);
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+.small-news-titles {
+  margin-top: -18px;
+  font-size: 18px;
+  width: 100%;
+  font-family: 'Homemade Apple';
+  color: rgba(0, 0, 0, 0.76);
+}
+
+.small-news-text {
+  margin-top: -10px;
+  width: 100%;
+  color: rgba(0, 0, 0, 0.76);
+  font-weight: bold;
+  font-family: 'IBM Plex Serif', serif;
+  font-size: 13px;
+}
+
+.read-more {
+  color: rgba(0, 0, 0, 0.76);
+}
+
+.read-more:hover {
+  color:rgb(146, 146, 112);
+}
+
+.creator {
+  font-family: 'IBM Plex Serif', serif;
+  font-weight: bold;
+  font-size: 12px;
+  text-align: center;
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+  .header {
+    display: flex;
+    flex-direction: column;
+    margin-top: 10px;
+  }
+
+  .logo {
+    padding-left: 10px;
+  }
+
+  .topnav {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-content: center;
+    margin-top: -30px;
+    padding: 10px;
+  }
+
+  .big-news {
+    margin-top: 5px;
+    padding-bottom: 10px;
+    background-color: rgba(250, 250, 210, 0.233);
+    display: grid;
+    grid-template-columns: 2fr;
+    grid-template-rows: 150px 200px;
+    text-align: center;
+  }
+
+  .big-news-title {
+    padding-top: 80px;
+    margin-right: -20px;
+    margin-left: -20px;
+    width: 100%;
+    font-size: 18px;
+    grid-column: 2;
+    grid-row: 1;
+  }
+
+  .big-news-text {
+    width: 100%;
+    grid-column: 2;
+    grid-row: 2;
+    margin-right: -20px;
+    margin-left: -20px;
+  }
+
+  .columbus {
+    max-width: 250px;
+    max-height: 300px;
+  }
+
+  .small-news {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(4, 1fr);
+    grid-column-gap: 10px;
+    place-items: center;
+  }
+
+  .genghis, .dowland, .calendar, .couple {
+    max-width: 150px;
+  }
+
+  .genghis {
+    grid-column: 1;
+    grid-row: 1;
+  }
+
+  .small-news-titles.a {
+    grid-column: 1;
+    grid-row: 2;
+    margin-top: -200px;
+  }
+
+  .small-news-text.a {
+    grid-column: 1;
+    grid-row: 3;
+    margin-top: -550px;
+  }
+
+  .calendar {
+    grid-column: 2;
+    grid-row: 1;
+  }  
+
+  .small-news-titles.b {
+    grid-column: 2;
+    grid-row: 2;
+    margin-top: -238px;
+  }
+
+  .small-news-text.b {
+    grid-column: 2;
+    grid-row: 3;
+    margin-top: -550px;
+  }
+
+  .dowland {
+    grid-column: 1;
+    grid-row: 4;
+    margin-top: -670px;
+  }
+
+  .small-news-titles.c {
+    grid-column: 1;
+    margin-top: -680px;
+  }
+
+  .small-news-text.c {
+    grid-column: 1;
+    margin-top: -510px;
+  }
+
+  .couple {
+    grid-column: 2;
+    grid-row: 4;
+    margin-top: -670px;
+  }
+
+  .small-news-titles.d {
+    grid-column: 2;
+    margin-top: -680px;
+  }
+
+  .small-news-text.d {
+    grid-column: 2;
+    margin-top: -400px;
+  }
 }
