--- a/code/style.css
+++ b/code/style.css
@@ -54,8 +54,11 @@ h1 {
   font-size: 25px;
 }
 
+.bars {
+  display: none;
+}
+
 .big-news {
-  width: 98%%;
   margin: 10px 10px 0 10px;
   display: flex;
   flex-direction: column;
@@ -65,17 +68,17 @@ h1 {
 }
 
 .gotland-image {
-  width: auto;
+  width: 100%;
   height: auto;
 }
 
-.big-news:hover {
+.big-news-text:hover {
   background-color:white;
-  text-decoration: underline;
+  text-shadow: 1px 1px grey;
 }
 
 h2 {
-  font-size: 35px;
+  font-size: 33px;
   text-transform: uppercase;
   margin: 10px;
 }
@@ -83,16 +86,21 @@ h2 {
 .small-text-big-news {
   margin-top: 0px;
   font-size: 20px;
+  margin: 0px 10px;
 }
 
 h3 {
-  font-size: 25px;
+  font-size: 24px;
   text-transform: uppercase;
-  margin-bottom: 5px;
+  margin: 10px 5px 5px 5px;
 }
 
 p {
   margin: 0px 5px 25px 5px;
+}
+
+p:hover {
+  text-shadow: 1px 1px grey;
 }
 
 .more-news {
@@ -100,7 +108,6 @@ p {
   flex-direction: column;
   justify-content: space-between;
   padding: 10px;
-  width: 100%%;
 }
 
 .news-card {
@@ -120,27 +127,42 @@ img {
 
 .news-card:hover {
   background-color: white;
-  border-top: 2px solid rgb(146, 51, 51);
+  border-top: 2px solid coral;
 }
 
 footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
   background-color: whitesmoke;
   padding: 30px;
-  text-align: center;
   animation-name: disco-footer;
-  animation-duration: 4s;
+  animation-duration: 3s;
   animation-iteration-count: infinite;
 }
-/*
+
+.foot-text1, .foot-text2 {
+  padding-top: 25px;
+}
+
 button {
-  padding: 10px 20px;
+  padding: 8px 16px;
   border-radius: 25px;
   border: none;
   font-family: "Montserrat", sans-serif;
-  background-color: rgb(146, 51, 51);
+  background-color: coral;
+}
+
+.button-text {
   color: whitesmoke;
-  font-size: 20px;
-}*/
+  font-size: 15px;
+}
+
+a {
+  text-decoration: none;
+  color: rgb(78, 77, 77);
+}
 
 /*tablet version*/
 @media (min-width: 668px) and (max-width: 1023px) {
@@ -152,18 +174,38 @@ button {
     display: inline;
   }
 
+  .bars {
+    display: flex;
+    align-items: center;
+
+  }
+
     .big-news {
       flex-direction: row;
       justify-content: space-evenly;
       align-items: center;
-      width: 95%;
+      width: 100%;
+    }
+
+    .gotland-image {
+      width: 50%;
+    }
+    
+    .big-news:hover {
+      text-shadow: 1px 1px grey;
+    }
+
+    .big-news-text:hover {
+      background-color: whitesmoke;
     }
 
     .more-news {
       flex-direction: row;
       flex-wrap: wrap;
       justify-content: space-evenly;
-      width: 95%;
+      width: 100%;
+      padding-left: 2px;
+      padding-right: 2px;
     }
 
     .news-card {
@@ -171,8 +213,18 @@ button {
     }
 
     img {
-      width: 100%;
+      width: 80%;
     }
+
+    button {
+      position: absolute;
+      left: 40%;
+    }
+
+    .foot-text1, .foot-text2 {
+      display: none;
+    }
+    
 }
 
 /*desktop version*/
@@ -185,6 +237,7 @@ button {
   .fa-bars {
     display: none;
   }
+
 
   .nav-text1, .nav-text2 {
     display: inline;
@@ -206,6 +259,14 @@ button {
     width: 23%;
   }
 
+  .big-news:hover {
+    text-shadow: 1px 1px grey;
+  }
+
+  .big-news-text:hover {
+    background-color: whitesmoke;
+  }
+
   .news-card:hover {
     border: 1px solid grey;
     padding: 3px;
@@ -218,10 +279,10 @@ button {
   img {
     width: 98%;
   }
-/*
-  button {
+
+  button, .foot-text1, .foot-text2 {
     display: none;
-  }*/
+  }
 
   @keyframes disco-footer {
     0%   {background-color:pink;}
