--- a/code/style.css
+++ b/code/style.css
@@ -102,7 +102,7 @@ footer {
   font-size: 20px;
   color: white;
   text-align: center;
-  height: 100px;
+  height: 150px;
   overflow: hidden;
 }
 
@@ -128,7 +128,7 @@ footer {
 }
 
 .icon {
-  padding: 30px;
+  /*padding: 30px;*/
   color: red;
 }
 
